27 March 2007: Wouter
	- added test for cache and not cached answers, in testbound replays.
	- testbound can give config file and commandline options from the
	  replay file to unbound.
	- created test that checks if items drop out of the cache.

26 March 2007: Wouter
	- config settings for slab hash message cache.
	- test for cached answer.
	- Fixup deleting fake answer from testbound list.

23 March 2007: Wouter
	- review of yesterday's commits.
	- covered up memory leak of the entry locks.
	- answers from the cache correctly. Copies flags correctly.
	- sanity check for incoming query replies.
	- slabbed hash table. Much nicer contention, need dual cpu to see.

22 March 2007: Wouter
	- AIX configure check.
	- lock-verify can handle references to locks that are created
	  in files it has not yet read in.
	- threaded hash table test. 
	- unit test runs lock-verify afterwards and checks result.
	- need writelock to update data on hash_insert.
	- message cache code, msgreply code.

21 March 2007: Wouter
	- unit test of hash table, fixup locking problem in table_grow().
	- fixup accounting of sizes for removing items from hashtable.
	- unit test for hash table, single threaded test of integrity.
	- lock-verify reports errors nicely. More quiet in operation.

16 March 2007: Wouter
	- lock-verifier, checks consistent order of locking.

14 March 2007: Wouter
	- hash table insert (and subroutines) and lookup implemented.
	- hash table remove.
	- unit tests for hash internal bin, lru functions.

13 March 2007: Wouter
	- lock_unprotect in checklocks.
	- util/storage/lruhash.h for LRU hash table structure.

12 March 2007: Wouter
	- configure.ac moved to 0.2.
	- query_info and replymsg util/data structure.

9 March 2007: Wouter
	- added rwlock writelock checking.
	  So it will keep track of the writelock, and readlocks are enforced
	  to not change protected memory areas.
	- log_hex function to dump hex strings to the logfile.