@@ -3,6 +3,8 @@
 	- testbound can give config file and commandline options from the
 	  replay file to unbound.
 	- created test that checks if items drop out of the cache.
+	- added word 'partitioned hash table' to documentation on slab hash.
+	  A slab hash is a partitioned hash table.
 
 26 March 2007: Wouter
 	- config settings for slab hash message cache.
